Added a diagram for pages and navigation, updated readme and deleted extra texts from cart.html and products.html

--- a/public/cart.html
+++ b/public/cart.html
@@ -28,7 +28,7 @@
     <button class="btn btn-primary" id="place-order-button">Place order</button>
   </main>
   <footer>
-    <p>Copyright &copy; 2023 diipadaa etc etc.</p>
+    <p>Copyright &copy; 2023</p>
   </footer>
   <template id="cart-item-template">
     <div class="item-row">
