--- a/public/products.html
+++ b/public/products.html
@@ -27,7 +27,7 @@
     <div id="products-container"></div>
   </main>
   <footer>
-    <p>Copyright &copy; 2023 diipadaa etc etc.</p>
+    <p>Copyright &copy; 2023</p>
   </footer>
   <template id="product-template">
     <div class="item-row">
